Create: Decision tree flow

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1168,6 +1168,116 @@
     },
     "register-preview-page": {
       "login": ""
+    },
+    "children-rights-page": {
+      "back": "Wstecz",
+      "continue": "Kontynuuj",
+      "submit": "Prześlij",
+      "view_content": "Zobacz więcej treści",
+      "no_articles_found": "Nie znaleziono artykułów na ten temat.",
+      "non_emergency_title": "Sytuacje niepilne",
+      "non_emergency_paragraph": "Każda sytuacja, która obecnie nie zagraża życiu lub bezpieczeństwu dziecka lub nastolatka.",
+      "non_emergency_question": "Jakiego rodzaju sytuacji szukasz profesjonalnych usług?",
+      "non_emergency_answer_1": "Nowa sytuacja, w której wcześniej nie kontaktowano się z profesjonalistą",
+      "non_emergency_answer_2": "Powtarzająca się sytuacja, w której nie kontaktowano się z profesjonalistą",
+      "non_emergency_answer_3": "Powtarzająca się sytuacja, w której już kontaktowano się z profesjonalistą",
+      "untitled_q1_question": "Jakiego rodzaju wyspecjalizowanych usług szukasz?",
+      "untitled_q1_answer_1": "Psychiatria dziecięca",
+      "untitled_q1_answer_2": "Ocena psychologiczna",
+      "untitled_q1_answer_3": "Poradnictwo psychologiczne",
+      "untitled_q1_answer_4": "Psychoterapia indywidualna",
+      "untitled_q2_question": "W której dzielnicy wolisz, aby znajdował się dostawca usług?",
+      "untitled_q3_question": "Jakiego rodzaju usługi szukasz?",
+      "untitled_q4_question": "Jaki jest Twój preferowany sposób płatności?",
+      "untitled_q5_question": "Jak wolisz współpracować z dostawcą?",
+      "sector_1": "Sektor 1",
+      "sector_2": "Sektor 2",
+      "sector_3": "Sektor 3",
+      "sector_4": "Sektor 4",
+      "sector_5": "Sektor 5",
+      "sector_6": "Sektor 6",
+      "property_type_public": "Publiczny",
+      "property_type_private": "Prywatny",
+      "property_type_ngo": "NGO",
+      "property_type_partnership": "Partnerstwo publiczno-prywatne",
+      "payment_free": "Usługi bezpłatne",
+      "payment_paid": "Usługi płatne",
+      "payment_copayment": "Usługi z dopłatą",
+      "payment_cnas": "Usługi objęte CNAS (Narodowe Ubezpieczenie Zdrowotne)",
+      "interaction_in_person": "Osobiście",
+      "interaction_online": "Online",
+      "interaction_phone": "Telefonicznie",
+      "interaction_hybrid": "Hybrydowe (połączone)",
+      "final_q1_question": "Jakie usługi chcesz, aby oferował dostawca?",
+      "final_q2_question": "W której dzielnicy wolisz, aby znajdował się dostawca usług?",
+      "final_q3_question": "Jakiego rodzaju usługi szukasz?",
+      "final_q4_question": "Jaki jest Twój preferowany sposób płatności?",
+      "service_pediatric_psychiatry": "Psychiatria dziecięca",
+      "service_psychological_assessment": "Ocena psychologiczna",
+      "service_psychological_counseling": "Poradnictwo psychologiczne",
+      "service_individual_psychotherapy": "Psychoterapia indywidualna",
+      "service_group_psychotherapy": "Psychoterapia grupowa",
+      "service_support_groups": "Grupy wsparcia",
+      "service_social_work": "Praca socjalna i poradnictwo",
+      "service_personal_development": "Rozwój osobisty",
+      "service_vocational_counseling": "Poradnictwo zawodowe i kariery",
+      "service_speech_therapy": "Logopedia",
+      "service_occupational_therapy": "Terapia zajęciowa/Ergoterapia",
+      "service_physiotherapy": "Kinezyterapia/Fizjoterapia/Rehabilitacja fizyczna",
+      "service_asd_therapies": "Terapie dla ASD (Zaburzenie ze spektrum autyzmu)",
+      "service_disability_assessment": "Ocena niepełnosprawności",
+      "service_pediatric_neurology": "Neurologia dziecięca",
+      "service_special_education": "Edukacja specjalna (psychopedagogika)",
+      "service_neuropsychomotor_rehab": "Rehabilitacja neuropsychomotoryczna",
+      "rights_intro_title": "Prawa dzieci i nastolatków do dostępu do usług zdrowia psychicznego i wsparcia psychospołecznego",
+      "rights_intro_paragraph": "Ten przewodnik pomoże Ci odkryć, jaki rodzaj wsparcia możesz otrzymać, jeśli go potrzebujesz, i kto może Ci pomóc — w szkole, w systemie opieki społecznej lub w systemie opieki zdrowotnej. Dowiesz się, jakie usługi są dostępne dla dzieci i nastolatków w Rumunii i jak możesz do nich uzyskać dostęp.",
+      "rights_intro_question": "Jakie usługi Cię interesują?",
+      "rights_intro_answer_1": "Usługi świadczone w szkołach",
+      "rights_intro_answer_2": "Usługi świadczone w systemie opieki społecznej",
+      "rights_intro_answer_3": "Usługi świadczone w systemie opieki zdrowotnej",
+      "section_2_title": "🏫 Usługi świadczone w szkołach",
+      "section_2_question": "Chciałbyś dowiedzieć się więcej o usługach szkolnych dla:",
+      "section_2_answer_1": "Wszystkich uczniów",
+      "section_2_answer_2": "Uczniów otrzymujących poziomy wsparcia I, II, III lub IV (Specjalne Potrzeby Edukacyjne)",
+      "section_2_answer_3": "Uczennic w ciąży i uczniów-rodziców",
+      "section_2_answer_4": "Uczniów będących ofiarami lub sprawcami przemocy w szkole",
+      "section_2_answer_5": "Uczniów ukaranych po incydentach dyscyplinarnych",
+      "section_3_title": "🎓 Usługi dla wszystkich uczniów",
+      "section_3_paragraph": "Zgodnie z prawem wszyscy uczniowie korzystają z monitorowania zdrowia psychicznego poprzez <0>usługi poradnictwa związane z działaniami szkolnymi</0>, zapewniając ich dobrostan psychiczny.\n\nUczniowie mają prawo dostępu do <0>informacji, poradnictwa szkolnego, poradnictwa zawodowego i wsparcia psychologicznego</0>, aby pomóc im się rozwijać i odkrywać własną ścieżkę.\n\nUczniowie z <0>specjalnymi potrzebami edukacyjnymi (SPE) lub innymi trudnościami</0> mogą otrzymać dodatkowe, dostosowane wsparcie — na przykład <0>specjalne warunki nauki lub oceny, a nawet nauczanie w domu lub w szpitalu</0>, jeśli to konieczne.\n\nWszyscy uczniowie mają również prawo do <0>bezpłatnych usług medycznych, psychologicznych i logopedycznych</0> poprzez gabinety zdrowia szkolnego lub publiczne placówki medyczne.\n\nTutaj możesz znaleźć kroki do wykonania, aby uzyskać dostęp do usług wsparcia psychologicznego jako uczeń:\n\n",
+      "section_4_title": "🧒🏻 Usługi dla uczniów z poziomami wsparcia I, II, III, IV (Specjalne Potrzeby Edukacyjne – SPE)",
+      "section_4_paragraph": "Uczniowie z <0>specjalnymi potrzebami edukacyjnymi (SPE)</0> korzystają z <0>Indywidualnego Planu Edukacyjnego (IPE)</0>, opracowanego przez specjalistów z Powiatowego Centrum Pomocy Psychopedagogicznej.\nPlan ten jest dostosowany do indywidualnych potrzeb każdego ucznia i może obejmować <0>wsparcie dla rodziny</0>, <0>poradnictwo psychologiczne</0>, <0>pomoc psychopedagogiczną</0>, <0>wsparcie w nauce</0>, <0>specyficzne terapie</0>, <0>fizjoterapię</0> lub inne formy zindywidualizowanego wsparcia.\n\n📘 Tutaj możesz znaleźć kroki do wykonania w celu uzyskania certyfikatu poradnictwa szkolnego i zawodowego, a także informacje o usługach dostępnych dla dzieci ze SPE.",
+      "section_5_title": "👩‍🍼 Usługi dla uczennic w ciąży i uczniów-rodziców",
+      "section_5_paragraph": "Zgodnie z <0>Ustawą nr 198 z 4 lipca 2023 r.</0> o edukacji przeduniwersyteckiej (Artykuł 76, ustęp 5), <0>uczennicom w ciąży i uczniom-rodzicom</0> przyznaje się <0>priorytetowy dostęp</0> do szeregu środków wsparcia mających na celu <0>zapobieganie porzuceniu szkoły</0>. Obejmują one:\n🗨️ <0>Poradnictwo szkolne</0> (w tym wsparcie ze strony mediatora szkolnego) i\n🧠 <0>Poradnictwo psychologiczne</0>.\n\n📘 W chwili obecnej ustawa <0>nie ma jeszcze przepisów wykonawczych</0>. Do czasu ich publikacji zalecamy skonsultowanie się z sekcją poświęconą usługom dostępnym dla wszystkich <0>uczniów</0>, którą można znaleźć tutaj:",
+      "section_6_title": "🛑 Usługi dla uczniów będących ofiarami lub sprawcami przemocy w szkole",
+      "section_6_paragraph": "💔 Uczniowie, którzy doświadczyli przemocy, mają prawo do <0>państwowych usług interwencji psychologicznej i psychoterapeutycznej</0>, na podstawie <0>rekomendacji doradcy szkolnego</0>.\nUsługi te są zaprojektowane, aby pomóc uczniom w emocjonalnym powrocie do zdrowia, odzyskaniu poczucia bezpieczeństwa i pewnej reintegracji w życie szkolne. 🌱\n\n 📘 Jeśli byłeś ofiarą, świadkiem lub zostałeś poinformowany o akcie przemocy w szkole, możesz znaleźć poniżej kroki, które musisz wykonać",
+      "section_7_title": "Uczniowie ukarani po określonych incydentach",
+      "section_7_paragraph": "Uczniowie mogą być karani, jeśli:\n\n - niszczą lub zmieniają dokumenty szkolne lub mienie szkolne;\n\n - przynoszą materiały promujące przemoc, nienawiść, dyskryminację lub szkodzące czyjejś reputacji;\n\n - blokują dostęp do szkoły;\n\n - posiadają lub używają narkotyków, alkoholu, papierosów, substancji etnobotanicznych lub grają w hazard na terenie szkoły;\n\n - przynoszą lub używają broni, fajerwerków, sprayów lub innych niebezpiecznych przedmiotów;\n\n - rozpowszechniają materiały polityczne, religijne, obsceniczne lub pornograficzne;\n\n - obrażają, dyskryminują lub wykazują agresję fizyczną lub werbalną;\n\n - opuszczają szkołę podczas zajęć bez pozwolenia;\n\n - przyprowadzają nieautoryzowanych gości bez zgody administracji szkoły;\n\n - promują rasistowskie wiadomości lub symbole.\n\nMożesz znaleźć rodzaje kar tutaj:",
+      "section_8_title": "🛡️ Usługi świadczone w systemie opieki społecznej",
+      "section_8_question": "Chcesz dowiedzieć się więcej o usługach świadczonych dla:",
+      "section_8_answer_1": "Nieletnich poddanych przemocy przez rodziców/opiekunów lub ofiar przemocy domowej",
+      "section_8_answer_2": "Nieletnich w dziennych ośrodkach dla dzieci, w rodzinach i/lub dzieci rozdzielonych lub zagrożonych rozdzieleniem od rodziców",
+      "section_8_answer_3": "Nieletnich w ośrodkach zamieszkania dla dzieci tymczasowo lub trwale rozdzielonych od rodziców",
+      "section_8_answer_4": "Nieletnich w ośrodkach przyjęć awaryjnych dla dzieci maltretowanych, zaniedbanych lub wykorzystywanych",
+      "section_8_answer_5": "Nieletnich w usługach społecznych z zakwaterowaniem, zorganizowanych jako ośrodki awaryjne, a także noclegowniach dla bezdomnych dzieci",
+      "section_9_title": "👨🏻‍👩🏻‍👧🏻‍👦🏻 Usługi dla nieletnich poddanych przemocy",
+      "section_9_paragraph": "Jeśli chcesz dowiedzieć się więcej o formach ochrony świadczonych przez służby pomocy społecznej i ochrony dzieci, przeczytaj tutaj:",
+      "section_10_title": "🏘️ Usługi oferowane nieletnim w ośrodkach opieki społecznej",
+      "section_10_paragraph": "Jeśli chcesz dowiedzieć się więcej o usługach oferowanych nieletnim w ośrodkach pomocy społecznej, przeczytaj tutaj:",
+      "section_11_title": "Usługi świadczone w systemie opieki zdrowotnej",
+      "section_11_question": "📚 Chcesz dowiedzieć się więcej o:",
+      "section_11_answer_1": "Usługach dla dzieci w wieku 0–18 lat, niezależnie od tego, czy są zapisane do instytucji edukacyjnej, czy nie",
+      "section_11_answer_2": "Nieletnich pacjentach z różnymi schorzeniami",
+      "section_11_answer_3": "Nieletnich pacjentach z zaburzeniami psychicznymi",
+      "section_12_title": "Usługi dla dzieci w wieku 0–18 lat, niezależnie od tego, czy są zapisane do instytucji edukacyjnej, czy nie",
+      "section_12_paragraph": "📘 Jeśli chcesz dowiedzieć się więcej o usługach oferowanych dzieciom w wieku 0–18 lat, przeczytaj tutaj:",
+      "section_13_title": "Usługi dla nieletnich pacjentów z różnymi schorzeniami",
+      "section_13_paragraph": "📘 Jeśli chcesz dowiedzieć się więcej o usługach świadczonych nieletnim pacjentom z różnymi schorzeniami medycznymi, przeczytaj tutaj:",
+      "section_14_title": "Usługi dla nieletnich pacjentów z zaburzeniami psychicznymi",
+      "section_14_paragraph": "📘 Jeśli chcesz dowiedzieć się więcej o usługach świadczonych nieletnim pacjentom z zaburzeniami psychicznymi, przeczytaj tutaj:",
+      "by": "przez {{creator}}",
+      "min_read": "min czytania",
+      "read_more": "Czytaj więcej",
+      "to_dashboard": "Przejdź do pulpitu"
     }
   },
   "backdrops": {
