--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1164,6 +1164,116 @@
     },
     "register-preview-page": {
       "login": ""
+    },
+    "children-rights-page": {
+      "back": "Назад",
+      "continue": "Продолжить",
+      "submit": "Отправить",
+      "view_content": "Посмотреть больше контента",
+      "no_articles_found": "Статьи по этой теме не найдены.",
+      "non_emergency_title": "Неэкстренные ситуации",
+      "non_emergency_paragraph": "Любая ситуация, которая в настоящее время не угрожает жизни или безопасности ребенка или подростка.",
+      "non_emergency_question": "Для какого типа ситуации вы ищете профессиональные услуги?",
+      "non_emergency_answer_1": "Новая ситуация, по которой ранее не обращались к специалисту",
+      "non_emergency_answer_2": "Повторяющаяся ситуация, по которой не обращались к специалисту",
+      "non_emergency_answer_3": "Повторяющаяся ситуация, по которой уже обращались к специалисту",
+      "untitled_q1_question": "Какой тип специализированных услуг вы ищете?",
+      "untitled_q1_answer_1": "Детская психиатрия",
+      "untitled_q1_answer_2": "Психологическая оценка",
+      "untitled_q1_answer_3": "Психологическое консультирование",
+      "untitled_q1_answer_4": "Индивидуальная психотерапия",
+      "untitled_q2_question": "В каком районе вы предпочитаете, чтобы находился поставщик услуг?",
+      "untitled_q3_question": "Какой тип услуги вы ищете?",
+      "untitled_q4_question": "Какой способ оплаты вы предпочитаете?",
+      "untitled_q5_question": "Как вы предпочитаете работать с поставщиком?",
+      "sector_1": "Сектор 1",
+      "sector_2": "Сектор 2",
+      "sector_3": "Сектор 3",
+      "sector_4": "Сектор 4",
+      "sector_5": "Сектор 5",
+      "sector_6": "Сектор 6",
+      "property_type_public": "Государственный",
+      "property_type_private": "Частный",
+      "property_type_ngo": "НПО",
+      "property_type_partnership": "Государственно-частное партнерство",
+      "payment_free": "Бесплатные услуги",
+      "payment_paid": "Платные услуги",
+      "payment_copayment": "Услуги с сооплатой",
+      "payment_cnas": "Услуги, покрываемые CNAS (Национальная медицинская страховка)",
+      "interaction_in_person": "Лично",
+      "interaction_online": "Онлайн",
+      "interaction_phone": "По телефону",
+      "interaction_hybrid": "Гибридный (комбинированный)",
+      "final_q1_question": "Какие услуги вы хотите, чтобы предоставлял поставщик?",
+      "final_q2_question": "В каком районе вы предпочитаете, чтобы находился поставщик услуг?",
+      "final_q3_question": "Какой тип услуги вы ищете?",
+      "final_q4_question": "Какой способ оплаты вы предпочитаете?",
+      "service_pediatric_psychiatry": "Детская психиатрия",
+      "service_psychological_assessment": "Психологическая оценка",
+      "service_psychological_counseling": "Психологическое консультирование",
+      "service_individual_psychotherapy": "Индивидуальная психотерапия",
+      "service_group_psychotherapy": "Групповая психотерапия",
+      "service_support_groups": "Группы поддержки",
+      "service_social_work": "Социальная работа и консультирование",
+      "service_personal_development": "Личностное развитие",
+      "service_vocational_counseling": "Профессиональное консультирование и карьерное руководство",
+      "service_speech_therapy": "Логопедия",
+      "service_occupational_therapy": "Трудотерапия/Эрготерапия",
+      "service_physiotherapy": "Кинезитерапия/Физиотерапия/Физическая реабилитация",
+      "service_asd_therapies": "Терапии для РАС (Расстройство аутистического спектра)",
+      "service_disability_assessment": "Оценка инвалидности",
+      "service_pediatric_neurology": "Детская неврология",
+      "service_special_education": "Специальное образование (психопедагогика)",
+      "service_neuropsychomotor_rehab": "Нейропсихомоторная реабилитация",
+      "rights_intro_title": "Права детей и подростков на доступ к услугам психического здоровья и психосоциальной поддержки",
+      "rights_intro_paragraph": "Это руководство поможет вам узнать, какой вид поддержки вы можете получить, если она вам нужна, и кто может вам помочь — в школе, в системе социальной защиты или в системе здравоохранения. Вы узнаете, какие услуги доступны для детей и подростков в Румынии и как к ним получить доступ.",
+      "rights_intro_question": "Какие услуги вас интересуют?",
+      "rights_intro_answer_1": "Услуги, предоставляемые в школах",
+      "rights_intro_answer_2": "Услуги, предоставляемые в системе социальной защиты",
+      "rights_intro_answer_3": "Услуги, предоставляемые в системе здравоохранения",
+      "section_2_title": "🏫 Услуги, предоставляемые в школах",
+      "section_2_question": "Хотели бы вы узнать больше о школьных услугах для:",
+      "section_2_answer_1": "Всех учащихся",
+      "section_2_answer_2": "Учащихся, получающих уровни поддержки I, II, III или IV (Особые образовательные потребности)",
+      "section_2_answer_3": "Беременных учащихся и учащихся-родителей",
+      "section_2_answer_4": "Учащихся, которые являются жертвами или виновниками насилия в школе",
+      "section_2_answer_5": "Учащихся, подвергнутых санкциям после дисциплинарных инцидентов",
+      "section_3_title": "🎓 Услуги для всех учащихся",
+      "section_3_paragraph": "По закону все учащиеся получают мониторинг психологического здоровья через <0>консультационные услуги, связанные со школьной деятельностью</0>, обеспечивая их психологическое благополучие.\n\nУчащиеся имеют право на доступ к <0>информации, школьному консультированию, карьерному руководству и психологической поддержке</0>, чтобы помочь им развиваться и находить свой путь.\n\nУчащиеся с <0>особыми образовательными потребностями (ООП) или другими трудностями</0> могут получить дополнительную, индивидуальную поддержку — например, <0>особые условия обучения или оценки, или даже обучение на дому или в больнице</0>, если это необходимо.\n\nВсе учащиеся также имеют право на <0>бесплатные медицинские, психологические и логопедические услуги</0> через школьные медицинские кабинеты или государственные медицинские учреждения.\n\nЗдесь вы можете найти шаги, которые нужно выполнить, чтобы получить доступ к услугам психологической поддержки как учащийся:\n\n",
+      "section_4_title": "🧒🏻 Услуги для учащихся с уровнями поддержки I, II, III, IV (Особые образовательные потребности – ООП)",
+      "section_4_paragraph": "Учащиеся с <0>особыми образовательными потребностями (ООП)</0> получают <0>Индивидуальный образовательный план (ИОП)</0>, разработанный специалистами из Уездного центра психолого-педагогической помощи.\nЭтот план адаптирован к индивидуальным потребностям каждого учащегося и может включать <0>поддержку семьи</0>, <0>психологическое консультирование</0>, <0>психолого-педагогическую помощь</0>, <0>поддержку в обучении</0>, <0>специфические терапии</0>, <0>физиотерапию</0> или другие формы индивидуальной поддержки.\n\n📘 Здесь вы можете найти шаги для получения сертификата школьного и карьерного руководства, а также информацию об услугах, доступных для детей с ООП.",
+      "section_5_title": "👩‍🍼 Услуги для беременных учащихся и учащихся-родителей",
+      "section_5_paragraph": "Согласно <0>Закону № 198 от 4 июля 2023 года</0> о довузовском образовании (Статья 76, пункт 5), <0>беременным учащимся и учащимся-родителям</0> предоставляется <0>приоритетный доступ</0> к ряду мер поддержки, направленных на <0>предотвращение отсева из школы</0>. К ним относятся:\n🗨️ <0>Школьное консультирование</0> (включая поддержку школьного медиатора) и\n🧠 <0>Психологическое консультирование</0>.\n\n📘 В настоящее время закон <0>еще не имеет нормативных актов по применению</0>. До их публикации мы рекомендуем обратиться к разделу, посвященному услугам, доступным для всех <0>учащихся</0>, который вы можете найти здесь:",
+      "section_6_title": "🛑 Услуги для учащихся, которые являются жертвами или виновниками насилия в школе",
+      "section_6_paragraph": "💔 Учащиеся, подвергшиеся насилию, имеют право на <0>государственные услуги психологического и психотерапевтического вмешательства</0> на основе <0>рекомендации школьного консультанта</0>.\nЭти услуги предназначены для помощи учащимся в эмоциональном восстановлении, восстановлении чувства безопасности и уверенной реинтеграции в школьную жизнь. 🌱\n\n 📘 Если вы были жертвой, свидетелем или были проинформированы об акте насилия в школе, вы можете найти ниже шаги, которые вам нужно выполнить",
+      "section_7_title": "Учащиеся, подвергнутые санкциям после определенных инцидентов",
+      "section_7_paragraph": "Учащиеся могут быть подвергнуты санкциям, если они:\n\n - уничтожают или изменяют школьные документы или школьное имущество;\n\n - приносят материалы, пропагандирующие насилие, ненависть, дискриминацию или наносящие вред чьей-либо репутации;\n\n - блокируют доступ к школе;\n\n - владеют или используют наркотики, алкоголь, сигареты, этноботанические вещества или играют в азартные игры на территории школы;\n\n - приносят или используют оружие, фейерверки, спреи или другие опасные предметы;\n\n - распространяют политические, религиозные, непристойные или порнографические материалы;\n\n - оскорбляют, дискриминируют или проявляют физическую или словесную агрессию;\n\n - покидают школу во время уроков без разрешения;\n\n - приводят неавторизованных посетителей без одобрения администрации школы;\n\n - пропагандируют расистские сообщения или символы.\n\nВы можете найти типы санкций здесь:",
+      "section_8_title": "🛡️ Услуги, предоставляемые в системе социальной защиты",
+      "section_8_question": "Вы хотите узнать больше об услугах, предоставляемых:",
+      "section_8_answer_1": "Несовершеннолетним, подвергшимся насилию со стороны родителей/опекунов или жертвам домашнего насилия",
+      "section_8_answer_2": "Несовершеннолетним в дневных центрах для детей, в семьях и/или детям, разлученным или находящимся под угрозой разлучения с родителями",
+      "section_8_answer_3": "Несовершеннолетним в центрах проживания для детей, временно или постоянно разлученных с родителями",
+      "section_8_answer_4": "Несовершеннолетним в центрах экстренного приема для подвергшихся насилию, заброшенных или эксплуатируемых детей",
+      "section_8_answer_5": "Несовершеннолетним в социальных услугах с размещением, организованных как центры экстренной помощи, а также ночных приютах для бездомных детей",
+      "section_9_title": "👨🏻‍👩🏻‍👧🏻‍👦🏻 Услуги для несовершеннолетних, подвергшихся насилию",
+      "section_9_paragraph": "Если вы хотите узнать больше о формах защиты, предоставляемых службами социальной помощи и защиты детей, читайте здесь:",
+      "section_10_title": "🏘️ Услуги, предлагаемые несовершеннолетним в центрах социальной защиты",
+      "section_10_paragraph": "Если вы хотите узнать больше об услугах, предлагаемых несовершеннолетним в центрах социальной помощи, читайте здесь:",
+      "section_11_title": "Услуги, предоставляемые в системе здравоохранения",
+      "section_11_question": "📚 Вы хотите узнать больше о:",
+      "section_11_answer_1": "Услугах для детей в возрасте 0–18 лет, независимо от того, обучаются ли они в образовательном учреждении или нет",
+      "section_11_answer_2": "Несовершеннолетних пациентах с различными состояниями",
+      "section_11_answer_3": "Несовершеннолетних пациентах с психическими расстройствами",
+      "section_12_title": "Услуги для детей в возрасте 0–18 лет, независимо от того, обучаются ли они в образовательном учреждении или нет",
+      "section_12_paragraph": "📘 Если вы хотите узнать больше об услугах, предлагаемых детям в возрасте 0–18 лет, читайте здесь:",
+      "section_13_title": "Услуги для несовершеннолетних пациентов с различными состояниями",
+      "section_13_paragraph": "📘 Если вы хотите узнать больше об услугах, предоставляемых несовершеннолетним пациентам с различными медицинскими состояниями, читайте здесь:",
+      "section_14_title": "Услуги для несовершеннолетних пациентов с психическими расстройствами",
+      "section_14_paragraph": "📘 Если вы хотите узнать больше об услугах, предоставляемых несовершеннолетним пациентам с психическими расстройствами, читайте здесь:",
+      "by": "от {{creator}}",
+      "min_read": "мин чтения",
+      "read_more": "Читать далее",
+      "to_dashboard": "Перейти к панели управления"
     }
   },
   "backdrops": {
