Refactor: styling adjustments

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -464,6 +464,9 @@
       "require_cookies": "Για να δείτε αυτό το βίντεο, αποδεχτείτε όλα τα cookies.",
       "cookie_preferences": "Προτιμήσεις cookies",
       "join_button_label_tooltip": "Μπορείτε να συνδεθείτε στη συνεδρία 5 λεπτά πριν από την ώρα έναρξης",
+      "dummy_provider_1": "Δρ. Παπαδόπουλος",
+      "dummy_provider_2": "Δρ. Νικολάου",
+      "dummy_provider_3": "Δρ. Γεωργίου",
       "upcoming_tab_label": "Επερχόμενες",
       "past_tab_label": "Προηγούμενες",
       "sunday": "Κυρ",
