--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -464,6 +464,9 @@
       "require_cookies": "To view this video, please accept all cookies.",
       "cookie_preferences": "Cookie preferences",
       "join_button_label_tooltip": "Դուք կարող եք միանալ խորհրդատվությանը սկսելուց 5 րոպե առաջ",
+      "dummy_provider_1": "Dr. Smith",
+      "dummy_provider_2": "Dr. Johnson",
+      "dummy_provider_3": "Dr. Williams",
       "upcoming_tab_label": "Առաջիկա",
       "past_tab_label": "Նախկին",
       "sunday": "Կիր․",
