--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -464,6 +464,9 @@
       "require_cookies": "Бұл бейнені көру үшін барлық cookie файлдарын қабылдаңыз.",
       "cookie_preferences": "Cookie параметрлері",
       "join_button_label_tooltip": "Сіз консультацияға басталғанға дейін 5 минут бұрын қосыла аласыз",
+      "dummy_provider_1": "Др. Нурланов",
+      "dummy_provider_2": "Др. Серсенов",
+      "dummy_provider_3": "Др. Жумабеков",
       "upcoming_tab_label": "Алдағы",
       "past_tab_label": "Бұрынғы",
       "sunday": "Жс",
