--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -464,6 +464,9 @@
       "require_cookies": "Aby obejrzeć ten film, zaakceptuj wszystkie pliki cookie.",
       "cookie_preferences": "Preferencje plików cookie",
       "join_button_label_tooltip": "Możesz dołączyć do konsultacji 5 minut przed rozpoczęciem",
+      "dummy_provider_1": "Dr Kowalski",
+      "dummy_provider_2": "Dr Nowak",
+      "dummy_provider_3": "Dr Wiśniewski",
       "upcoming_tab_label": "Nadchodzące",
       "past_tab_label": "Wcześniejsze",
       "sunday": "Niedz.",
