--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -462,6 +462,9 @@
       "november": "noiembrie",
       "december": "decembrie",
       "join_button_label_tooltip": "Puteți intra la consultație cu 5 minute înainte de începere",
+      "dummy_provider_1": "Dr. Popescu",
+      "dummy_provider_2": "Dr. Ionescu",
+      "dummy_provider_3": "Dr. Popa",
       "require_cookies": "Pentru a viziona acest videoclip, vă rugăm să acceptați toate cookie-urile.",
       "cookie_preferences": "Preferințe pentru cookie-uri",
       "upcoming_tab_label": "Urmează",
