--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -464,6 +464,9 @@
       "require_cookies": "Чтобы посмотреть это видео, примите все cookie-файлы.",
       "cookie_preferences": "Настройки cookie",
       "join_button_label_tooltip": "Вы можете присоединиться к консультации за 5 минут до начала",
+      "dummy_provider_1": "Др. Иванова",
+      "dummy_provider_2": "Др. Петрова",
+      "dummy_provider_3": "Др. Смирнова",
       "upcoming_tab_label": "Предстоящие",
       "past_tab_label": "Прошлые",
       "sunday": "Вс",
