--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -464,6 +464,9 @@
       "require_cookies": "Щоб переглянути це відео, прийміть усі файли cookie.",
       "cookie_preferences": "Налаштування файлів cookie",
       "join_button_label_tooltip": "Ви можете приєднатися до консультації за 5 хвилин до початку",
+      "dummy_provider_1": "Др. Шевченко",
+      "dummy_provider_2": "Др. Коваленко",
+      "dummy_provider_3": "Др. Мельник",
       "upcoming_tab_label": "Майбутні",
       "past_tab_label": "Попередні",
       "sunday": "Нд",
